# TopoCompass

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tmp_chern_check.py
app/: streamlit_app.py
src/topocompass/: __init__.py  core.py  core_numba.py  model.py
tests/: test_smoke.py
