[project]
name = "topocompass"
version = "0.1.0"
description = "Automated generator and solver of magnon bilinears for SOC honeycomb Mott insulators"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Shifeng" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "sympy>=1.12",
  "streamlit>=1.34"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = where = where = where = where = where = where = where = where = where = where = w

ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccnears, solve_magnon_bilinears
from .model import SpinExchangeModel

__all__ = [
    "SpinExchangeModel",
    "generate_bilinears",
    "solve_magnon_bilinears",
]
